--- a/app/stylesheets/pages/assignments2_student/_student_header.scss
+++ b/app/stylesheets/pages/assignments2_student/_student_header.scss
@@ -16,31 +16,32 @@
  * with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 
- .assignment-pizza-header-outer {
-   width: 100%;
-   position: relative;
-   height: 120px;
- }
+.assignment-pizza-header-outer {
+  width: 100%;
+  position: relative;
+  height: 120px;
+}
 
- .assignment-pizza-header-inner {
-   position: absolute;
-   #{direction(right)}: 0;
- }
+.assignment-pizza-header-inner {
+  width: 100%;
+  position: absolute;
+  #{direction(right)}: 0;
+}
 
- .assignment-student-header-normal {
-   position: static;
- }
+.assignment-student-header-normal {
+  position: static;
+}
 
- .assignment-student-header-sticky {
-   position: sticky;
-   padding: 12px;
-   top: 0px;
-   #{direction(right)}: 0px;
-   background-color: white;
-   height: 120px;
-   z-index: 100;
-   border-bottom: 1px solid $ic-border-light;
- }
+.assignment-student-header-sticky {
+  position: sticky;
+  padding: 12px;
+  top: 0px;
+  #{direction(right)}: 0px;
+  background-color: white;
+  height: 120px;
+  z-index: 100;
+  border-bottom: 1px solid $ic-border-light;
+}
 
 .steps-container {
   margin-bottom: 3.75rem;
